# SpatialJS

./: .gitignore  .gitmodules  README.md  server.js
decoder/: CMakeLists.txt  spatialjs_decoder.cpp  spatialjs_decoder.hpp
decoder/include/: splv_brick.h  splv_buffer_reader.h  splv_decoder.hpp  splv_error.h  splv_frame.h  splv_global.h  uint8_stream.hpp
decoder/src/: morton_lut.hpp  splv_brick.cpp  splv_decoder.cpp  splv_frame.cpp  splv_morton_lut.h
player/: index.html
player/shaders/: quad.frag  quad.vert  quad.wgsl  raytrace.wgsl
player/src/: player.js  raytracer.js  spl_decoder.js
player/videos/: deer.splv  illaoi.splv  sequence32.splv
spatial-player/: README.md  package.json
spatial-player/shaders/: quad.wgsl  raytrace.wgsl
spatial-player/src/: index.js  math.js  raytracer.js  shaders.js  spl_decoder.js
test/: index.html  package.json  server.js
test/videos/: default_sequence_32.splv  illaoi_64.splv  illaoi_gop1.splv  illaoi_gop10.splv  illaoi_gop3.splv  sequence32_gop1.splv  sequence32_gop10.splv  sequence32_gop3.splv  trex.splv  vox_sequence.splv
